# MorsCodeConverter

./: CMakeLists.txt  ConvertMe.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/: mors_converter.cpp  mors_file.cpp  mors_file.h
src/defs/: definition_importer.cpp  definition_importer.h  defs.txt
src/structure/: mors.cpp  mors.h
src/translation/: translate.cpp  translate.h
